--- a/pr123 - Google Cloud Services/pom.xml
+++ b/pr123 - Google Cloud Services/pom.xml
@@ -98,7 +98,11 @@
     <dependency>                        <!-- https://github.com/FasterXML/jackson-databind -->
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.5</version>
+      
+      <!-- https://github.com/Zluz/Projects/network/alert/pr123%20-%20Google%20Cloud%20Services/pom.xml/com.fasterxml.jackson.core:jackson-databind/open -->
+      <!-- <version>2.9.5</version> -->
+      <version>[2.9.8,)</version>
+      
     </dependency>
 
     <dependency>                        <!-- Google Core Libraries for Java -->
